# heat_transfer_rust

./: Cargo.toml  README.md
src/: lib.rs
src/ControlVolumeCalculations/: CommonFunctions.rs  ExplictCalculations.rs  FluidEntity_StructsAndTraits.rs  Sandbox.rs  TherminolDowthermPipes.rs  mod.rs
src/ControlVolumeCalculations/CommonFunctions/: courant_number.rs  derivation.md  mod.rs  thermal_resistance.rs
src/ControlVolumeCalculations/ExplicitCalculations/: mod.rs
src/ControlVolumeCalculations/FluidEntity_StructsAndTraits/: experimental.rs  mod.rs
src/ControlVolumeCalculations/control_volume_traits/: mod.rs  pipe.rs
src/NusseltCorrelations/: PipeCorrelations.rs  mod.rs
